# univ

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  flake.nix  flake.nix.bak  logfile  pageAcessReadme.md  reload_db.sh
backend/: Cargo.toml  flake.nix  shell.nix
backend/src/: main.rs
frontend/: index.html  problem1.html
frontend/src/: problems.html
frontend/src/css/: main.css
migrations/00000000000000_diesel_initial_setup/: down.sql  dummy.sql  up.sql
src/: global_state.rs  main.rs  mock.rs  oauth.rs  schema.rs  serve.rs  serve_types.rs
src/storage/: conn.rs  db.rs  mod.rs  model.rs  schema.rs
templates/: about.html  index.html  leaderboard.html  problem.html  problems.html  profile.html
templates/common/: foot.html  head.html  navbar.html
templates/static/css/: main.css
