[package]
name = "univ"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = "0.5"
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
actix-files = "0.6"
rand = "0.8"
dotenv = "0.15"
openidconnect = "2.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.0"