[package]
name = "univ"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = "0.5"
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
actix-files = "0.6"
rand = "0.8"
dotenv = "0.15"
diesel = { version = "2.1.0", features = [
  "postgres",
  "r2d2",
  "numeric",
  "chrono",
  "64-column-tables"
] }
diesel_json = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
openidconnect = "2.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
oauth2 = "4.0"
